Migrate Azure Storage Blob Changefeed to Test Proxy (#36678)
Migrate Azure Storage Blob Changefeed to Test Proxy